Opened 16 years ago

Closed 15 years ago

Last modified 15 years ago

#3036 closed bug (fixed)

[DriveSetup] should open main window without bottom scrollbar (easy)

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/DriveSetup Version: R1/Development
Keywords: Cc: jacob.simpson@…, elikcoreighn@…
Blocked By: Blocking:
Platform: All

Description

Just to look more polished.

Attachments (6)

drivesetup.png (133.5 KB ) - added by diver 16 years ago.
DriveSetupNew.png (106.8 KB ) - added by harsha 16 years ago.
drivesetup.patch (363 bytes ) - added by harsha 16 years ago.
DriveSetup.png (75.8 KB ) - added by diver 15 years ago.
note truncated ata/master
drivesetup-2.patch (454 bytes ) - added by jacob.simpson 15 years ago.
Expand window size to make horizonatal scrollbar inactive.
ColumnListView_widthfix.patch (379 bytes ) - added by Duggan 15 years ago.
Fixes ColumnListView width issues

Download all attachments as: .zip

Change History (29)

by diver, 16 years ago

Attachment: drivesetup.png added

comment:1 by diver, 16 years ago

Summary: [DriveSetup] should open main window without bottom scrollbar[DriveSetup] should open main window without bottom scrollbar (easy)

by harsha, 16 years ago

Attachment: DriveSetupNew.png added

comment:2 by harsha, 16 years ago

increased the window width. check the screen shot and let me know.

thanks, _harsha

comment:3 by scottmc, 16 years ago

looks good. now just create and attach a patch to the ticket.

by harsha, 16 years ago

Attachment: drivesetup.patch added

comment:4 by stippi, 15 years ago

Resolution: fixed
Status: newclosed

Sorry, didn't notice the patch, but it didn't fix the actual problem. However, I have meanwhile come up with a fix that will always try to open the window such that scrolling is not necessary and also all the columns have their preferred width.

comment:5 by stippi, 15 years ago

Fixed in hrev32853, forgot to mention.

comment:6 by diver, 15 years ago

Resolution: fixed
Status: closedreopened

Still reproducible in hrev32886, reopening.

by diver, 15 years ago

Attachment: DriveSetup.png added

note truncated ata/master

comment:7 by diver, 15 years ago

I've attached screenshot to show current view. Double clicking column separator doesn't change anything.

by jacob.simpson, 15 years ago

Attachment: drivesetup-2.patch added

Expand window size to make horizonatal scrollbar inactive.

comment:8 by jacob.simpson, 15 years ago

Cc: jacob.simpson@… added

If I understand what is posted in this ticket, there are two issues.

  1. The issue that started the ticket seems to be about the horizontal scroll bar being active at the default window sizing when viewing the partition list.
  1. In certain circumstances, when the Device column is double clicked on the separator, it doesn't resize to display all the text in all the cells of the column without collapsing. Documented in comment:ticket:3036:7

I have attached a patch which I believe addresses issue 1.

comment:9 by diver, 15 years ago

Still here in hrev35141.

comment:10 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

comment:11 by diver, 15 years ago

There is a patch attached to this ticket. Maybe someone could look at it?
To reproduce this problem one could use:

jam -j2 -q haiku-anyboot-imagege
qemu -cdrom haiku/trunk/generated.x86gcc2/haiku-anyboot.image

comment:12 by stippi, 15 years ago

The patch is not a good solution, since obviously BColumnListView::PreferredSize() is expected to return the correct size. The problem simply does not bother me enough so I was too lazy to look into it. :-}

by Duggan, 15 years ago

Fixes ColumnListView width issues

comment:13 by Duggan, 15 years ago

patch: 01

comment:15 by Duggan, 15 years ago

I looked at this a little bit and it seems the issue is caused by TitleView::_VirtualWidth() returning the incorrect width. A patch has been submitted for review.

comment:16 by Duggan, 15 years ago

Cc: elikcoreighn@… added

comment:17 by Duggan, 15 years ago

patch: 10

comment:18 by Duggan, 15 years ago

There's another issue now (or still?) where if the virtual width is larger than the width and scrolled entirely right and the size is then reduced, the scrollbar becomes inaccurate. I'll attempt to work on that next.

comment:19 by stippi, 15 years ago

patch: 01

comment:20 by Duggan, 15 years ago

I see what the other issue that was being referred is and I'll start taking a look at it as well. Also, the rightmost column part can be exceptionally difficult to grab as its right on the edge with the vertical scrollbar, so maybe adding a couple pixels of width wouldn't hurt, but not nearly as much as before.

comment:21 by Ziusudra, 15 years ago

I've noticed that grabbing that rightmost column divider is an issue in Tracker, too. When the window is zoomed to the optimum size in details view mode, there seems to be only a 2 pixel wide area to grab and the divider is actually covered by the scroll bar. Oh, look a ticket: #4318

Also, I think that the DriveSetup should be made zoomable in the same way as Tracker.

comment:22 by Ziusudra, 15 years ago

Created ticket for zoom enhancement: #6265

comment:23 by stippi, 15 years ago

Resolution: fixed
Status: reopenedclosed

Fixed for real in hrev38374. When you confirm the fix, make sure to remove the DriveSetup settings file in which it remembers its window position.

comment:24 by stippi, 15 years ago

patch: 10
Note: See TracTickets for help on using tickets.