Finally fixed #3036: BColumnListView::PreferredSize() needs to take into account the correct extra spacing around the TitleView, as well the internal margin width that the TitleView adds to the current column width sum for its virtual width used to set the horizontal scrollbar proportion. Introduced TitleView::MarginWidth() for that.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38374 a95241bf-73f2-0310-859d-f6bbb57e9c96